# wxb

./: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  eventBus.ts  eventHandler.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: global.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.txt  demo.docx  generate_report.py  vulnerabilities.db
src-tauri/resources/myenv/: pyvenv.cfg
src-tauri/resources/myenv/Scripts/: activate  activate.bat
src-tauri/src/: main.rs
src-tauri/src/components/: about_department.rs  add_menu.rs  add_platform_login_info.rs  add_query_info.rs  add_vulnerability.rs  delete_vulnerability.rs  edit_vulnerability.rs  load_all_data.rs  mod.rs  query_all_vulnerability.rs
src-tauri/src/implements/: aqc_query.rs  mod.rs  process_docx.rs  process_json.rs  process_upload.rs  python_processor.rs  word_processor.rs
src/components/: AboutDepartment.vue  AddPlatformLoginInfo.vue  AddQueryInfo.vue  AddVulnerability.vue  AssistImageUploader.vue  QueryVulnerabilityInfo.vue  TestProcessImageUploader.vue
src/views/: CreateReport.vue  Index.vue  OpenPlatform.vue  PendingReportsWrapper.vue  ShowReportsDetails.vue  test.vue
