[package]
name = "wxb"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = {version = "0.32.1", features = ["bundled"] }
zip = "0.5"
quick-xml = "0.22"
base64 = "0.22.1"
scraper = "0.20.0"
docx-rs = "0.4.17"
regex = "1.10.6"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = "0.12.5"
tokio = "1.39.2"
urlencoding = "2.1.3"
time = "=0.3.29"

[features]
custom-protocol = ["tauri/custom-protocol"]

